# taska

./: .gitignore  CHANGELOG.md  README.md  Taska.cabal
app/: Main.hs
